# model-periodic-learning-mlops-test

./: .env.template  .gitignore  README.md  asset-manifest.json  docker-compose.yml  index.html  pyproject.toml  terraform_executor_permissions.md  tf_pre_phase_outputs_to_env.sh
.github/workflows/: python-test.yml  trigger_cloud_run.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  constants.ts  index.tsx  types.ts
docker/: Dockerfile
mplm/: main.py  settings.py
mplm/agent/: automatic_model_build_agent.py
mplm/chains/: summary_chain.py  training_chain.py
mplm/db/: base.py  crud.py  download_db_file.py  models.py  session.py
mplm/llm/: __init__.py  client.py  model_list.py
mplm/models/: data.py  state.py  summary.py  training.py
mplm/prompts/: summary.py  train_code.py
mplm/services/: code_executor.py  code_parser.py  data_loader.py  summary_generator.py  training_code_generator.py  training_executor.py
mplm/utils/: exceptions.py  fileio.py  gcs.py  logger.py  retry.py  visualization.py
scripts/: convert_dbrecord_to_csv.py  create_acc_stats_figure_test.py  csv_upload_test.py  show_db_records.py
static/css/: main.8f8017a8.css  main.8f8017a8.css.map
static/js/: main.1e40aac3.js  main.1e40aac3.js.map  main.42df6b62.js  main.42df6b62.js.map  main.480888ce.js  main.480888ce.js.LICENSE.txt  main.480888ce.js.map  main.69fc8120.js  main.69fc8120.js.map  main.afb57c2e.js  main.afb57c2e.js.map  main.d7200009.js  main.d7200009.js.LICENSE.txt  main.d7200009.js.map
tests/: conftest.py  test_settings.py
(+26 files in other folders)
