[project]
name = "model-periodic-learning-mlops-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "google-cloud-storage>=3.6.0",
    "langchain>=1.0.7",
    "langchain-classic>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]

[tool.setuptools.packages.find]
include = ['mplm']

[tool.ruff]
lint.select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W",  # warning
    "UP",
]
lint.ignore = []
lint.fixable = ["ALL"]
exclude = [
    ".ruff_cache",
    ".venv"
]
line-length = 300
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
